removed sprite processing

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <p class="article__date date">
               <span class="date__day">12</span>
               <svg class="date__arrow" height="5">
-                <use xlink:href="img/sprite.svg#date-arrow" />
+                <use xlink:href="../static/sprite.svg#date-arrow" />
               </svg>
               <span class="date__month">Апреля</span>
             </p>
@@ -124,27 +124,27 @@
                 />
                 <label class="rating__label" for="rating-1" aria-label="1 звездf">
                   <svg class="rating__star">
-                    <use xlink:href="img/sprite.svg#star" />
+                    <use xlink:href="../static/sprite.svg#star" />
                   </svg>
                 </label>
                 <label class="rating__label" for="rating-2" aria-label="2 звезды">
                   <svg class="rating__star">
-                    <use xlink:href="img/sprite.svg#star" />
+                    <use xlink:href="../static/sprite.svg#star" />
                   </svg>
                 </label>
                 <label class="rating__label" for="rating-3" aria-label="3 звезды">
                   <svg class="rating__star">
-                    <use xlink:href="img/sprite.svg#star" />
+                    <use xlink:href="../static/sprite.svg#star" />
                   </svg>
                 </label>
                 <label class="rating__label" for="rating-4" aria-label="4 звезды">
                   <svg class="rating__star">
-                    <use xlink:href="img/sprite.svg#star" />
+                    <use xlink:href="../static/sprite.svg#star" />
                   </svg>
                 </label>
                 <label class="rating__label" for="rating-5" aria-label="5 звезд">
                   <svg class="rating__star">
-                    <use xlink:href="img/sprite.svg#star" />
+                    <use xlink:href="../static/sprite.svg#star" />
                   </svg>
                 </label>
               </div>
@@ -170,7 +170,7 @@
                   placeholder="Выберите книгу"
                 />
                 <svg class="form__input-arrow">
-                  <use xlink:href="img/sprite.svg#select-arrow" />
+                  <use xlink:href="../static/sprite.svg#select-arrow" />
                 </svg>
                 <span class="form__input-options-wrapp">
                   <datalist class="form__input-options" id="books">
