--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="icon" href="img/favicon.png" type="image/png" />
-    <link rel="preload" as="image" href="../static/sprite.svg" />
+    <link rel="preload" as="image" href="../static/sprite.svg" type="image/svg+xml" />
     <title>Путь JavaScript</title>
   </head>
   <body>
