--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <p class="article__date date">
               <span class="date__day">12</span>
               <svg class="date__arrow" height="5">
-                <use xlink:href="../static/sprite.svg#date-arrow" />
+                <use xlink:href="#date-arrow" />
               </svg>
               <span class="date__month">Апреля</span>
             </p>
@@ -123,27 +123,27 @@
                 />
                 <label class="rating__label" for="rating-1" aria-label="1 звездf">
                   <svg class="rating__star">
-                    <use xlink:href="../static/sprite.svg#star" />
+                    <use xlink:href="#star" />
                   </svg>
                 </label>
                 <label class="rating__label" for="rating-2" aria-label="2 звезды">
                   <svg class="rating__star">
-                    <use xlink:href="../static/sprite.svg#star" />
+                    <use xlink:href="#star" />
                   </svg>
                 </label>
                 <label class="rating__label" for="rating-3" aria-label="3 звезды">
                   <svg class="rating__star">
-                    <use xlink:href="../static/sprite.svg#star" />
+                    <use xlink:href="#star" />
                   </svg>
                 </label>
                 <label class="rating__label" for="rating-4" aria-label="4 звезды">
                   <svg class="rating__star">
-                    <use xlink:href="../static/sprite.svg#star" />
+                    <use xlink:href="#star" />
                   </svg>
                 </label>
                 <label class="rating__label" for="rating-5" aria-label="5 звезд">
                   <svg class="rating__star">
-                    <use xlink:href="../static/sprite.svg#star" />
+                    <use xlink:href="#star" />
                   </svg>
                 </label>
               </div>
@@ -169,7 +169,7 @@
                   placeholder="Выберите книгу"
                 />
                 <svg class="form__input-arrow">
-                  <use xlink:href="../static/sprite.svg#select-arrow" />
+                  <use xlink:href="#select-arrow" />
                 </svg>
                 <span class="form__input-options-wrapp">
                   <datalist class="form__input-options" id="books">
@@ -230,5 +230,30 @@
         <div class="swiper-pagination footer__pagination"></div>
       </div>
     </footer>
+    <svg width="0" height="0" class="hidden">
+      <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 5 5" id="date-arrow">
+        <path d="M5 2.5L0 5V0L5 2.5Z" fill="currentColor"></path>
+      </symbol>
+      <symbol id="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 23">
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M12.7327 18.3074L12.5 18.1851L12.2673 18.3074L5.81675 21.6987L7.0487 14.5159L7.09314 14.2568L6.9049 14.0733L1.68627 8.98641L8.89824 7.93845L9.15838 7.90065L9.27471 7.66493L12.5 1.12978L15.7253 7.66493L15.8416 7.90065L16.1018 7.93845L23.3137 8.98641L18.0951 14.0733L17.9069 14.2568L17.9513 14.5159L19.1833 21.6987L12.7327 18.3074Z"
+          fill="inherit"
+          stroke-width="1"
+          stroke="inherit"
+        />
+      </symbol>
+      <symbol
+        id="select-arrow"
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+      >
+        <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+      </symbol>
+    </svg>
   </body>
 </html>
