--- a/src/index.html
+++ b/src/index.html
@@ -233,7 +233,7 @@
               </label>
               <label class="form__input">
                 <input class="form__input-item" type="text" name="email" required placeholder="E-mail" />
-                <span class="form__input-placeholder">E-mail</span>
+                <span class="form__input-placeholder">Email</span>
               </label>
               <label class="form__input form__input_type_select">
                 <input
@@ -268,7 +268,7 @@
                 <span class="form__input-placeholder">Ваш отзыв</span>
               </label>
             </fieldset>
-            <button type="submit" class="button form__submit">ОТПРАВИТЬ</button>
+            <button type="submit" class="button form__submit">Отправить</button>
           </form>
         </div>
       </section>
@@ -302,7 +302,7 @@
                   <img class="nav__img" src="img/article-js.png" alt="" />
                 </span>
                 <span class="nav__date">5 декабря</span>
-                <span class="nav__caption">Асинхронность в JavaScript</span>
+                <span class="nav__caption">Асинхронность в&nbsp;JavaScript</span>
               </a>
             </li>
           </ul>
